--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,1 +1,7 @@
 <app-menu></app-menu>
+<div class="container">
+    <div class="row">
+        <app-category class="col-4 d-none d-md-block bg-success"></app-category>
+        <app-movie class="col-md-8 bg-primary"></app-movie>
+    </div>
+</div>
