--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -1,1 +1,6 @@
-<p>movie works!</p>
+<div class="card bg-dark text-white" style="width: 18rem;">
+    <img class="card-img" src="../../assets/img/movie.jpg">
+    <div class="card-box d-flex justify-content-center align-items-center">
+        <h5 class="card-title ">More Info <i class="fas fa-arrow-right"></i></h5>
+    </div>
+</div>
