--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -2,6 +2,6 @@
 <div class="container">
     <div class="row">
         <app-category class="col-2 d-none d-md-block bg-success"></app-category>
-        <app-movie class="col-md-10 bg-primary"></app-movie>
+        <app-movie class="col-md-10 bg-secondary"></app-movie>
     </div>
 </div>
