Created and designed mini slider

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,7 +1,8 @@
-<app-menu></app-menu>
-<div class="container">
-    <div class="row">
-        <app-category class="col-2 d-none d-md-block bg-success"></app-category>
-        <app-movie class="col-md-10 bg-secondary"></app-movie>
+<div>
+    <app-menu></app-menu>
+    <div class="container px-3 px-md-0">
+
+        <app-mini-slider></app-mini-slider>
+
     </div>
 </div>
