fix: Fixed some problems in login service

--- a/src/app/components/mini-slider/mini-slider.component.scss
+++ b/src/app/components/mini-slider/mini-slider.component.scss
@@ -30,6 +30,7 @@ h3 {
     background-color: black;
     height: 100%;
     margin: 0 3px;
+    border-radius: 5px;
 }
 
 .movie-box:hover .img-fluid {
