--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -2,6 +2,6 @@
     <app-menu></app-menu>
     <div class="container px-3 px-md-0">
         <app-mini-slider></app-mini-slider>
-
+        <app-footer></app-footer>
     </div>
 </div>
