--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <div>
     <app-menu></app-menu>
     <div class="container px-3 px-md-0">
-        <app-mini-slider></app-mini-slider>
+        <router-outlet></router-outlet>
         <app-footer></app-footer>
     </div>
 </div>
