--- a/src/app/components/accordion/accordion.component.html
+++ b/src/app/components/accordion/accordion.component.html
@@ -6,11 +6,11 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button
-                class="accordion-button"
+                class="accordion-button collapsed"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseOne"
-                aria-expanded="true"
+                aria-expanded="false"
                 aria-controls="collapseOne"
               >
                 Frequently Asked Questions 1
@@ -18,7 +18,7 @@
             </h2>
             <div
               id="collapseOne"
-              class="accordion-collapse collapse show"
+              class="accordion-collapse collapse"
               aria-labelledby="headingOne"
               data-bs-parent="#accordionExample"
             >
@@ -30,8 +30,7 @@
                 and hiding via CSS transitions. You can modify any of this with
                 custom CSS or overriding our default variables. It's also worth
                 noting that just about any HTML can go within the
-                accordion-body, though the transition does limit
-                overflow.
+                accordion-body, though the transition does limit overflow.
               </div>
             </div>
           </div>
@@ -62,8 +61,7 @@
                 and hiding via CSS transitions. You can modify any of this with
                 custom CSS or overriding our default variables. It's also worth
                 noting that just about any HTML can go within the
-                accordion-body, though the transition does limit
-                overflow.
+                accordion-body, though the transition does limit overflow.
               </div>
             </div>
           </div>
@@ -77,7 +75,7 @@
                 aria-expanded="false"
                 aria-controls="collapseThree"
               >
-               Frequently Asked Questions 3
+                Frequently Asked Questions 3
               </button>
             </h2>
             <div
@@ -94,19 +92,18 @@
                 and hiding via CSS transitions. You can modify any of this with
                 custom CSS or overriding our default variables. It's also worth
                 noting that just about any HTML can go within the
-                accordion-body, though the transition does limit
-                overflow.
+                accordion-body, though the transition does limit overflow.
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingFour">
               <button
-                class="accordion-button"
+                class="accordion-button collapsed"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseFour"
-                aria-expanded="true"
+                aria-expanded="false"
                 aria-controls="collapseFour"
               >
                 Frequently Asked Questions 4
@@ -114,7 +111,7 @@
             </h2>
             <div
               id="collapseFour"
-              class="accordion-collapse collapse show"
+              class="accordion-collapse collapse"
               aria-labelledby="headingFour"
               data-bs-parent="#accordionExample"
             >
@@ -126,19 +123,18 @@
                 and hiding via CSS transitions. You can modify any of this with
                 custom CSS or overriding our default variables. It's also worth
                 noting that just about any HTML can go within the
-                accordion-body, though the transition does limit
-                overflow.
+                accordion-body, though the transition does limit overflow.
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingFive">
               <button
-                class="accordion-button"
+                class="accordion-button collapsed"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseFive"
-                aria-expanded="true"
+                aria-expanded="false"
                 aria-controls="collapseFive"
               >
                 Frequently Asked Questions 5
@@ -146,7 +142,7 @@
             </h2>
             <div
               id="collapseFive"
-              class="accordion-collapse collapse show"
+              class="accordion-collapse collapse"
               aria-labelledby="headingFive"
               data-bs-parent="#accordionExample"
             >
@@ -158,8 +154,7 @@
                 and hiding via CSS transitions. You can modify any of this with
                 custom CSS or overriding our default variables. It's also worth
                 noting that just about any HTML can go within the
-                accordion-body, though the transition does limit
-                overflow.
+                accordion-body, though the transition does limit overflow.
               </div>
             </div>
           </div>
