refactor: some page designs are revised

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,5 +1,5 @@
 .content{  
-    background-color: rgba($color: #1d1c1c, $alpha: 1.0);
+    background-color:#141414;
     padding: 100px 0;
     color: rgba($color: #e4dcc4, $alpha: 1.0);
 
