--- a/src/app/components/accordion/accordion.component.scss
+++ b/src/app/components/accordion/accordion.component.scss
@@ -1,6 +1,5 @@
 .content {
-  background-color: rgba($color: #1d1c1c, $alpha: 1);
-
+  background-color: #141414;
   color: rgba($color: #e4dcc4, $alpha: 1);
 }
 
